force-app/main/default/objects/Paycheck_Estimate__c/Paycheck_Estimate__c.object-meta.xml
<CustomObject>
    <label>Paycheck Estimate</label>
    <nameField>
        <label>Paycheck Estimate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Paycheck Estimates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>