force-app/main/default/objects/Paycheck_Estimate__c/fields/Job_Application__c.field-meta.xml
<CustomField>
    <fullName>Job_Application__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Job Application</label>
    <referenceTo>Job_Application__c</referenceTo>
    <relationshipLabel>Paycheck Estimates</relationshipLabel>
    <relationshipName>Paycheck_Estimates</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>