force-app/main/default/objects/Paycheck_Estimate__c/fields/Take_Home_Weekly__c.field-meta.xml
<CustomField>
    <fullName>Take_Home_Weekly__c</fullName>
    <label>Take Home (Weekly)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>