force-app/main/default/objects/Paycheck_Estimate__c/fields/Take_Home_Yearly__c.field-meta.xml
<CustomField>
    <fullName>Take_Home_Yearly__c</fullName>
    <label>Take Home (Yearly)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>